--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@
 /Suit.class
 /HoleCards.class
 /TexasHoldem.class
+/HandRankingsBigO.class
+/CardComparator.class
+/Card$1.class
+/Card$2.class
+/Evaluate.class
